--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,7 @@ body {
 .fileWithoutFolder:hover {
   color: white;
   background-color: #6264667a;
+  padding: 5px 0px 5px 20px;
 }
 
 .fileWithoutFolder {
